--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
-    "clipboardy": "^2.3.0",
+    "clipboard-copy": "^4.0.1",
     "connect-mongo": "^3.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
